Replaced education with examples account

--- a/spark-on-dsx/animaldb-python-load-to-dashdb.ipynb
+++ b/spark-on-dsx/animaldb-python-load-to-dashdb.ipynb
@@ -18,7 +18,7 @@
    ],
    "source": [
     "cloudantdata = spark.read.format(\"org.apache.bahir.cloudant\")\\\n",
-    "       .option(\"cloudant.host\",\"education.cloudant.com\")\\\n",
+    "       .option(\"cloudant.host\",\"examples.cloudant.com\")\\\n",
     "       .load(\"animaldb\")\n",
     "cloudantdata.cache()"
    ]
