--- a/spark-on-dsx/animaldb-scala-load-to-dashdb.ipynb
+++ b/spark-on-dsx/animaldb-scala-load-to-dashdb.ipynb
@@ -22,7 +22,7 @@
     "\n",
     "// Loading data from Cloudant db\n",
     "val cloudantdata = sqlContext.read.format(\"org.apache.bahir.cloudant\").\n",
-    "option(\"cloudant.host\", \"education.cloudant.com\").\n",
+    "option(\"cloudant.host\", \"examples.cloudant.com\").\n",
     "load(\"animaldb\")\n",
     "\n",
     "// Caching df in memory to speed computations\n",
