Updated IBM Watson Studio notebook steps - Added instructions for installing sql-cloudant library - Use default Spark runtime - Update Apache Spark link since the service is not deprecated - Updated Bluemix references to IBM Watson Studio

--- a/spark-on-watson-studio/crimes-python-load-to-dashdb.ipynb
+++ b/spark-on-watson-studio/crimes-python-load-to-dashdb.ipynb
@@ -16,7 +16,7 @@
     "\n",
     "## Before you begin \n",
     "\n",
-    "These are the services required in your IBM Bluemix account:\n",
+    "These are the services required in your IBM Watson Studio account:\n",
     "\n",
     "1. [Apache Spark](https://console.bluemix.net/catalog/services/apache-spark)\n",
     "2. [Db2 Warehouse on Cloud](https://console.bluemix.net/catalog/services/dashdb)\n",
@@ -278,7 +278,7 @@
     "5. Click **View Data** and you should see a list of documents.\n",
     "\n",
     "To learn more about Cloudant and work with your own Cloudant database, check out the \n",
-    " [Cloudant NoSQL DB IBM Bluemix service](https://console.bluemix.net/catalog/services/cloudant-nosql-db).\n",
+    " [Cloudant NoSQL DB IBM Watson Studio service](https://console.bluemix.net/catalog/services/cloudant-nosql-db).\n",
     "\n"
    ]
   }
