--- a/spark-on-watson-studio/sales-continuous-load-cloudant-to-db2.ipynb
+++ b/spark-on-watson-studio/sales-continuous-load-cloudant-to-db2.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "## Before you begin \n",
     "\n",
-    "These are the services required in your IBM Bluemix account:\n",
+    "These are the services required in your IBM Watson Studio account:\n",
     "\n",
     "1. [Apache Spark](https://console.bluemix.net/catalog/services/apache-spark)\n",
     "2. [Db2 Warehouse on Cloud](https://console.bluemix.net/catalog/services/dashdb)\n",
